Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7540,7 +7540,11 @@
       "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.15625\tLoss: 21571.309\n",
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 10.085227272727273\tLoss: 4.548\n",
       "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 10.582386363636363\tLoss: 3.598\n",
-      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 11.860795454545455\tLoss: 3.169\n"
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 11.860795454545455\tLoss: 3.169\n",
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 47.58522727272727\tLoss: 1.647\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 70.38352272727273\tLoss: 1.409\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 64.27556818181819\tLoss: 3.82\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 37.64204545454545\tLoss: 17.216\n"
      ]
     }
    ],
