--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7607,7 +7607,9 @@
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 19.105113636363637\tLoss: 48.167\n",
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 13.494318181818182\tLoss: 79.789\n",
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 10.511363636363637\tLoss: 82.009\n",
-      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.724431818181818\tLoss: 69.264\n"
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.724431818181818\tLoss: 69.264\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 10.298295454545455\tLoss: 2.304\n",
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 13.139204545454545\tLoss: 2.308\n"
      ]
     }
    ],
