--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7609,7 +7609,10 @@
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 10.511363636363637\tLoss: 82.009\n",
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.724431818181818\tLoss: 69.264\n",
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 10.298295454545455\tLoss: 2.304\n",
-      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 13.139204545454545\tLoss: 2.308\n"
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 13.139204545454545\tLoss: 2.308\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 15.838068181818182\tLoss: 2.423\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 22.65625\tLoss: 3.222\n",
+      "Coord: [-0.3 -0.6]\tAcc: 41\tLoss: 3.977\r"
      ]
     }
    ],
