--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7544,7 +7544,11 @@
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 47.58522727272727\tLoss: 1.647\n",
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 70.38352272727273\tLoss: 1.409\n",
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 64.27556818181819\tLoss: 3.82\n",
-      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 37.64204545454545\tLoss: 17.216\n"
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 37.64204545454545\tLoss: 17.216\n",
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 18.181818181818183\tLoss: 85.676\n",
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 12.215909090909092\tLoss: 793.993\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 10.15625\tLoss: 7836.71\n",
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 10.724431818181818\tLoss: 4.214\n"
      ]
     }
    ],
