--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7641,7 +7641,16 @@
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 26.84659090909091\tLoss: 2.28\n",
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 48.29545454545455\tLoss: 2.044\n",
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 62.42897727272727\tLoss: 2.487\n",
-      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 65.05681818181819\tLoss: 3.061\n"
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 65.05681818181819\tLoss: 3.061\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 51.5625\tLoss: 9.048\n",
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 23.295454545454547\tLoss: 89.234\n",
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 11.221590909090908\tLoss: 1515.303\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 10.298295454545455\tLoss: 28064.565\n",
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 11.931818181818182\tLoss: 2.917\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 12.855113636363637\tLoss: 2.518\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 20.383522727272727\tLoss: 2.314\n",
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 43.32386363636363\tLoss: 1.827\n",
+      "Coord: [-0.3 -0.4]\tAcc: 67\tLoss: 1.732\r"
      ]
     }
    ],
