--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7612,7 +7612,9 @@
       "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 13.139204545454545\tLoss: 2.308\n",
       "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 15.838068181818182\tLoss: 2.423\n",
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 22.65625\tLoss: 3.222\n",
-      "Coord: [-0.3 -0.6]\tAcc: 41\tLoss: 3.977\r"
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 37.42897727272727\tLoss: 5.161\n",
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 50.56818181818182\tLoss: 7.451\n",
+      "Coord: [ 0.1 -0.6]\tAcc: 56\tLoss: 12.545\r"
      ]
     }
    ],
