--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7548,7 +7548,12 @@
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 18.181818181818183\tLoss: 85.676\n",
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 12.215909090909092\tLoss: 793.993\n",
       "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 10.15625\tLoss: 7836.71\n",
-      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 10.724431818181818\tLoss: 4.214\n"
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 10.724431818181818\tLoss: 4.214\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 10.795454545454545\tLoss: 3.686\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 10.866477272727273\tLoss: 3.414\n",
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 20.667613636363637\tLoss: 2.383\n",
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 73.1534090909091\tLoss: 0.849\n",
+      "Coord: [-0.1 -0.4]\tAcc: 100\tLoss: 0.657\r"
      ]
     }
    ],
