--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7614,7 +7614,9 @@
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 22.65625\tLoss: 3.222\n",
       "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 37.42897727272727\tLoss: 5.161\n",
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 50.56818181818182\tLoss: 7.451\n",
-      "Coord: [ 0.1 -0.6]\tAcc: 56\tLoss: 12.545\r"
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 36.78977272727273\tLoss: 19.896\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 17.542613636363637\tLoss: 53.112\n",
+      "Coord: [ 0.5 -0.6]\tAcc: 13\tLoss: 71.392\r"
      ]
     }
    ],
