Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7616,7 +7616,9 @@
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 50.56818181818182\tLoss: 7.451\n",
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 36.78977272727273\tLoss: 19.896\n",
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 17.542613636363637\tLoss: 53.112\n",
-      "Coord: [ 0.5 -0.6]\tAcc: 13\tLoss: 71.392\r"
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 12.286931818181818\tLoss: 73.935\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 10.795454545454545\tLoss: 68.558\n",
+      "Coord: [ 1.  -0.6]\tAcc: 9\tLoss: 48.9115\r"
      ]
     }
    ],
