Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7650,7 +7650,15 @@
       "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 12.855113636363637\tLoss: 2.518\n",
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 20.383522727272727\tLoss: 2.314\n",
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 43.32386363636363\tLoss: 1.827\n",
-      "Coord: [-0.3 -0.4]\tAcc: 67\tLoss: 1.732\r"
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 66.1221590909091\tLoss: 1.482\n",
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 79.54545454545455\tLoss: 1.292\n",
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 70.3125\tLoss: 2.842\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 43.67897727272727\tLoss: 19.71\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 13.068181818181818\tLoss: 364.621\n",
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 9.588068181818182\tLoss: 6413.625\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 10.085227272727273\tLoss: 114803.438\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 10.582386363636363\tLoss: 2.502\n",
+      "Coord: [-0.8 -0.3]\tAcc: 10\tLoss: 2.461\r"
      ]
     }
    ],
