--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7553,7 +7553,11 @@
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 10.866477272727273\tLoss: 3.414\n",
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 20.667613636363637\tLoss: 2.383\n",
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 73.1534090909091\tLoss: 0.849\n",
-      "Coord: [-0.1 -0.4]\tAcc: 100\tLoss: 0.657\r"
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 80.9659090909091\tLoss: 1.066\n",
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 63.06818181818182\tLoss: 5.343\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 30.18465909090909\tLoss: 30.604\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 13.849431818181818\tLoss: 249.363\n",
+      "Coord: [ 0.7 -0.4]\tAcc: 11\tLoss: 782.563\r"
      ]
     }
    ],
