--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7618,7 +7618,9 @@
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 17.542613636363637\tLoss: 53.112\n",
       "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 12.286931818181818\tLoss: 73.935\n",
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 10.795454545454545\tLoss: 68.558\n",
-      "Coord: [ 1.  -0.6]\tAcc: 9\tLoss: 48.9115\r"
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 9.019886363636363\tLoss: 54.741\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 11.292613636363637\tLoss: 2.3\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 14.133522727272727\tLoss: 2.298\n"
      ]
     }
    ],
