--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7557,7 +7557,11 @@
       "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 63.06818181818182\tLoss: 5.343\n",
       "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 30.18465909090909\tLoss: 30.604\n",
       "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 13.849431818181818\tLoss: 249.363\n",
-      "Coord: [ 0.7 -0.4]\tAcc: 11\tLoss: 782.563\r"
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 10.227272727272727\tLoss: 2664.183\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 10.085227272727273\tLoss: 24977.611\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 11.008522727272727\tLoss: 3.833\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 10.724431818181818\tLoss: 3.503\n",
+      "Coord: [-0.6 -0.3]\tAcc: 13\tLoss: 3.272\r"
      ]
     }
    ],
