--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7620,7 +7620,9 @@
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 10.795454545454545\tLoss: 68.558\n",
       "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 9.019886363636363\tLoss: 54.741\n",
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 11.292613636363637\tLoss: 2.3\n",
-      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 14.133522727272727\tLoss: 2.298\n"
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 14.133522727272727\tLoss: 2.298\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 21.37784090909091\tLoss: 2.342\n",
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 39.41761363636363\tLoss: 2.958\n"
      ]
     }
    ],
