Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7622,7 +7622,9 @@
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 11.292613636363637\tLoss: 2.3\n",
       "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 14.133522727272727\tLoss: 2.298\n",
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 21.37784090909091\tLoss: 2.342\n",
-      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 39.41761363636363\tLoss: 2.958\n"
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 39.41761363636363\tLoss: 2.958\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 58.09659090909091\tLoss: 3.503\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 59.73011363636363\tLoss: 6.133\n"
      ]
     }
    ],
