--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7561,7 +7561,11 @@
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 10.085227272727273\tLoss: 24977.611\n",
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 11.008522727272727\tLoss: 3.833\n",
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 10.724431818181818\tLoss: 3.503\n",
-      "Coord: [-0.6 -0.3]\tAcc: 13\tLoss: 3.272\r"
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 11.647727272727273\tLoss: 3.05\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 57.17329545454545\tLoss: 1.164\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 89.41761363636364\tLoss: 0.348\n",
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 84.44602272727273\tLoss: 1.133\n",
+      "Coord: [ 0.2 -0.3]\tAcc: 92\tLoss: 3.7282\r"
      ]
     }
    ],
