--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7658,7 +7658,15 @@
       "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 9.588068181818182\tLoss: 6413.625\n",
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 10.085227272727273\tLoss: 114803.438\n",
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 10.582386363636363\tLoss: 2.502\n",
-      "Coord: [-0.8 -0.3]\tAcc: 10\tLoss: 2.461\r"
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 15.553977272727273\tLoss: 2.336\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 31.818181818181817\tLoss: 2.07\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 63.99147727272727\tLoss: 1.156\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 84.0909090909091\tLoss: 0.697\n",
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 87.71306818181819\tLoss: 0.742\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 67.54261363636364\tLoss: 4.595\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 27.62784090909091\tLoss: 77.346\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 11.647727272727273\tLoss: 1525.739\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 10.440340909090908\tLoss: 30526.274\n"
      ]
     }
    ],
