Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7624,7 +7624,10 @@
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 21.37784090909091\tLoss: 2.342\n",
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 39.41761363636363\tLoss: 2.958\n",
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 58.09659090909091\tLoss: 3.503\n",
-      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 59.73011363636363\tLoss: 6.133\n"
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 59.73011363636363\tLoss: 6.133\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 32.45738636363637\tLoss: 23.93\n",
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 14.630681818181818\tLoss: 57.036\n",
+      "Coord: [ 0.6 -0.5]\tAcc: 20\tLoss: 65.491\r"
      ]
     }
    ],
