Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7565,7 +7565,11 @@
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 57.17329545454545\tLoss: 1.164\n",
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 89.41761363636364\tLoss: 0.348\n",
       "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 84.44602272727273\tLoss: 1.133\n",
-      "Coord: [ 0.2 -0.3]\tAcc: 92\tLoss: 3.7282\r"
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 53.26704545454545\tLoss: 9.837\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 20.59659090909091\tLoss: 71.481\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 11.221590909090908\tLoss: 847.863\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 10.15625\tLoss: 8956.098\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 10.9375\tLoss: 3.948\n"
      ]
     }
    ],
