--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7627,7 +7627,9 @@
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 59.73011363636363\tLoss: 6.133\n",
       "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 32.45738636363637\tLoss: 23.93\n",
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 14.630681818181818\tLoss: 57.036\n",
-      "Coord: [ 0.6 -0.5]\tAcc: 20\tLoss: 65.491\r"
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 11.079545454545455\tLoss: 65.856\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 9.943181818181818\tLoss: 56.16\n",
+      "Coord: [ 1.  -0.5]\tAcc: 9\tLoss: 49.6912\r"
      ]
     }
    ],
