--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7629,7 +7629,9 @@
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 14.630681818181818\tLoss: 57.036\n",
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 11.079545454545455\tLoss: 65.856\n",
       "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 9.943181818181818\tLoss: 56.16\n",
-      "Coord: [ 1.  -0.5]\tAcc: 9\tLoss: 49.6912\r"
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 10.582386363636363\tLoss: 2.304\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 14.0625\tLoss: 2.288\n",
+      "Coord: [-0.7 -0.4]\tAcc: 19\tLoss: 2.245\r"
      ]
     }
    ],
