--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7569,7 +7569,11 @@
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 20.59659090909091\tLoss: 71.481\n",
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 11.221590909090908\tLoss: 847.863\n",
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 10.15625\tLoss: 8956.098\n",
-      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 10.9375\tLoss: 3.948\n"
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 10.9375\tLoss: 3.948\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 10.9375\tLoss: 3.6\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 10.866477272727273\tLoss: 3.319\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 24.360795454545453\tLoss: 2.14\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 87.9971590909091\tLoss: 0.337\n"
      ]
     }
    ],
