Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7631,7 +7631,9 @@
       "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 9.943181818181818\tLoss: 56.16\n",
       "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 10.582386363636363\tLoss: 2.304\n",
       "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 14.0625\tLoss: 2.288\n",
-      "Coord: [-0.7 -0.4]\tAcc: 19\tLoss: 2.245\r"
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 18.892045454545453\tLoss: 2.214\n",
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 37.57102272727273\tLoss: 2.061\n",
+      "Coord: [-0.3 -0.4]\tAcc: 70\tLoss: 1.875\r"
      ]
     }
    ],
