--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7666,7 +7666,16 @@
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 67.54261363636364\tLoss: 4.595\n",
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 27.62784090909091\tLoss: 77.346\n",
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 11.647727272727273\tLoss: 1525.739\n",
-      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 10.440340909090908\tLoss: 30526.274\n"
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 10.440340909090908\tLoss: 30526.274\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 9.943181818181818\tLoss: 2.365\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 12.855113636363637\tLoss: 2.398\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 21.875\tLoss: 2.235\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 53.26704545454545\tLoss: 1.559\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 84.01988636363636\tLoss: 0.548\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 95.95170454545455\tLoss: 0.156\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 86.15056818181819\tLoss: 0.996\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 52.13068181818182\tLoss: 14.28\n",
+      "Coord: [ 0.5 -0.2]\tAcc: 46\tLoss: 58.498\r"
      ]
     }
    ],
