Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7633,7 +7633,9 @@
       "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 14.0625\tLoss: 2.288\n",
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 18.892045454545453\tLoss: 2.214\n",
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 37.57102272727273\tLoss: 2.061\n",
-      "Coord: [-0.3 -0.4]\tAcc: 70\tLoss: 1.875\r"
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 60.79545454545455\tLoss: 2.008\n",
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 76.2784090909091\tLoss: 2.001\n",
+      "Coord: [ 0.2 -0.4]\tAcc: 73\tLoss: 7.279\r"
      ]
     }
    ],
