--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7573,7 +7573,11 @@
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 10.9375\tLoss: 3.6\n",
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 10.866477272727273\tLoss: 3.319\n",
       "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 24.360795454545453\tLoss: 2.14\n",
-      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 87.9971590909091\tLoss: 0.337\n"
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 87.9971590909091\tLoss: 0.337\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 96.5909090909091\tLoss: 0.108\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 80.39772727272727\tLoss: 2.118\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 36.50568181818182\tLoss: 22.854\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 13.849431818181818\tLoss: 236.088\n"
      ]
     }
    ],
