Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7635,7 +7635,9 @@
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 37.57102272727273\tLoss: 2.061\n",
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 60.79545454545455\tLoss: 2.008\n",
       "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 76.2784090909091\tLoss: 2.001\n",
-      "Coord: [ 0.2 -0.4]\tAcc: 73\tLoss: 7.279\r"
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 60.79545454545455\tLoss: 6.438\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 26.84659090909091\tLoss: 31.155\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 13.068181818181818\tLoss: 58.113\n"
      ]
     }
    ],
