--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7577,7 +7577,12 @@
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 96.5909090909091\tLoss: 0.108\n",
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 80.39772727272727\tLoss: 2.118\n",
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 36.50568181818182\tLoss: 22.854\n",
-      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 13.849431818181818\tLoss: 236.088\n"
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 13.849431818181818\tLoss: 236.088\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 10.227272727272727\tLoss: 2942.415\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 11.576704545454545\tLoss: 28185.057\n",
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 10.9375\tLoss: 3.689\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 10.866477272727273\tLoss: 3.393\n",
+      "Coord: [-0.6 -0.1]\tAcc: 14\tLoss: 3.129\r"
      ]
     }
    ],
