--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7675,7 +7675,15 @@
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 95.95170454545455\tLoss: 0.156\n",
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 86.15056818181819\tLoss: 0.996\n",
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 52.13068181818182\tLoss: 14.28\n",
-      "Coord: [ 0.5 -0.2]\tAcc: 46\tLoss: 58.498\r"
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 15.198863636363637\tLoss: 344.426\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 11.292613636363637\tLoss: 6794.037\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 10.227272727272727\tLoss: 123880.809\n",
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 11.292613636363637\tLoss: 2.334\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 16.264204545454547\tLoss: 2.302\n",
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 37.92613636363637\tLoss: 2.001\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 74.92897727272727\tLoss: 0.827\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 97.01704545454545\tLoss: 0.115\n",
+      "Coord: [ 0.  -0.1]\tAcc: 126\tLoss: 0.074\r"
      ]
     }
    ],
