Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7637,7 +7637,9 @@
       "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 76.2784090909091\tLoss: 2.001\n",
       "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 60.79545454545455\tLoss: 6.438\n",
       "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 26.84659090909091\tLoss: 31.155\n",
-      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 13.068181818181818\tLoss: 58.113\n"
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 13.068181818181818\tLoss: 58.113\n",
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 9.872159090909092\tLoss: 57.089\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 9.161931818181818\tLoss: 45.645\n"
      ]
     }
    ],
