Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7639,7 +7639,10 @@
       "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 26.84659090909091\tLoss: 31.155\n",
       "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 13.068181818181818\tLoss: 58.113\n",
       "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 9.872159090909092\tLoss: 57.089\n",
-      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 9.161931818181818\tLoss: 45.645\n"
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 9.161931818181818\tLoss: 45.645\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 13.28125\tLoss: 2.297\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 15.269886363636363\tLoss: 2.253\n",
+      "Coord: [-0.6 -0.3]\tAcc: 33\tLoss: 2.177\r"
      ]
     }
    ],
