--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7582,7 +7582,11 @@
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 11.576704545454545\tLoss: 28185.057\n",
       "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 10.9375\tLoss: 3.689\n",
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 10.866477272727273\tLoss: 3.393\n",
-      "Coord: [-0.6 -0.1]\tAcc: 14\tLoss: 3.129\r"
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 11.860795454545455\tLoss: 2.912\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 65.3409090909091\tLoss: 0.936\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 97.44318181818181\tLoss: 0.062\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 95.73863636363636\tLoss: 0.193\n",
+      "Coord: [ 0.2 -0.1]\tAcc: 106\tLoss: 2.092\r"
      ]
     }
    ],
