Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7642,7 +7642,9 @@
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 9.161931818181818\tLoss: 45.645\n",
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 13.28125\tLoss: 2.297\n",
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 15.269886363636363\tLoss: 2.253\n",
-      "Coord: [-0.6 -0.3]\tAcc: 33\tLoss: 2.177\r"
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 30.894886363636363\tLoss: 1.977\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 57.24431818181818\tLoss: 1.459\n",
+      "Coord: [-0.2 -0.3]\tAcc: 96\tLoss: 1.149\r"
      ]
     }
    ],
