--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7586,7 +7586,11 @@
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 65.3409090909091\tLoss: 0.936\n",
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 97.44318181818181\tLoss: 0.062\n",
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 95.73863636363636\tLoss: 0.193\n",
-      "Coord: [ 0.2 -0.1]\tAcc: 106\tLoss: 2.092\r"
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 64.5596590909091\tLoss: 6.326\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 22.798295454545453\tLoss: 61.519\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 10.795454545454545\tLoss: 866.86\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 10.15625\tLoss: 9818.722\n",
+      "Coord: [ 1.  -0.1]\tAcc: 10\tLoss: 31584.489\r"
      ]
     }
    ],
