Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7683,7 +7683,15 @@
       "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 37.92613636363637\tLoss: 2.001\n",
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 74.92897727272727\tLoss: 0.827\n",
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 97.01704545454545\tLoss: 0.115\n",
-      "Coord: [ 0.  -0.1]\tAcc: 126\tLoss: 0.074\r"
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 97.58522727272727\tLoss: 0.097\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 75.14204545454545\tLoss: 2.758\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 31.036931818181817\tLoss: 67.092\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 12.215909090909092\tLoss: 1501.657\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 10.369318181818182\tLoss: 33063.445\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 10.795454545454545\tLoss: 2.345\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 11.150568181818182\tLoss: 2.321\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 23.792613636363637\tLoss: 2.219\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 55.89488636363637\tLoss: 1.517\n"
      ]
     }
    ],
