--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7644,7 +7644,9 @@
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 15.269886363636363\tLoss: 2.253\n",
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 30.894886363636363\tLoss: 1.977\n",
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 57.24431818181818\tLoss: 1.459\n",
-      "Coord: [-0.2 -0.3]\tAcc: 96\tLoss: 1.149\r"
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 81.60511363636364\tLoss: 0.927\n",
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 84.80113636363636\tLoss: 1.197\n",
+      "Coord: [ 0.2 -0.3]\tAcc: 90\tLoss: 3.9749\r"
      ]
     }
    ],
