Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7590,7 +7590,11 @@
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 22.798295454545453\tLoss: 61.519\n",
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 10.795454545454545\tLoss: 866.86\n",
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 10.15625\tLoss: 9818.722\n",
-      "Coord: [ 1.  -0.1]\tAcc: 10\tLoss: 31584.489\r"
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 10.440340909090908\tLoss: 3.84\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 10.653409090909092\tLoss: 3.465\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 11.008522727272727\tLoss: 3.188\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 28.053977272727273\tLoss: 1.999\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 89.98579545454545\tLoss: 0.289\n"
      ]
     }
    ],
