--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7646,7 +7646,9 @@
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 57.24431818181818\tLoss: 1.459\n",
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 81.60511363636364\tLoss: 0.927\n",
       "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 84.80113636363636\tLoss: 1.197\n",
-      "Coord: [ 0.2 -0.3]\tAcc: 90\tLoss: 3.9749\r"
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 53.97727272727273\tLoss: 10.07\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 21.803977272727273\tLoss: 39.743\n",
+      "Coord: [ 0.6 -0.3]\tAcc: 12\tLoss: 58.808\r"
      ]
     }
    ],
