--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7648,7 +7648,9 @@
       "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 84.80113636363636\tLoss: 1.197\n",
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 53.97727272727273\tLoss: 10.07\n",
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 21.803977272727273\tLoss: 39.743\n",
-      "Coord: [ 0.6 -0.3]\tAcc: 12\tLoss: 58.808\r"
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 12.571022727272727\tLoss: 55.31\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 9.588068181818182\tLoss: 49.138\n",
+      "Coord: [-1.  -0.2]\tAcc: 17\tLoss: 2.2956\r"
      ]
     }
    ],
