--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7594,7 +7594,11 @@
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 10.653409090909092\tLoss: 3.465\n",
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 11.008522727272727\tLoss: 3.188\n",
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 28.053977272727273\tLoss: 1.999\n",
-      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 89.98579545454545\tLoss: 0.289\n"
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 89.98579545454545\tLoss: 0.289\n",
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 99.21875\tLoss: 0.027\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 86.2215909090909\tLoss: 1.184\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 40.83806818181818\tLoss: 19.911\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 13.778409090909092\tLoss: 217.188\n"
      ]
     }
    ],
