Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7691,7 +7691,16 @@
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 10.795454545454545\tLoss: 2.345\n",
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 11.150568181818182\tLoss: 2.321\n",
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 23.792613636363637\tLoss: 2.219\n",
-      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 55.89488636363637\tLoss: 1.517\n"
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 55.89488636363637\tLoss: 1.517\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 90.98011363636364\tLoss: 0.288\n",
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 99.28977272727273\tLoss: 0.028\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 91.26420454545455\tLoss: 0.513\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 56.03693181818182\tLoss: 11.845\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 15.340909090909092\tLoss: 327.143\n",
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 11.860795454545455\tLoss: 7273.568\n",
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 10.227272727272727\tLoss: 133312.284\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 10.582386363636363\tLoss: 2.33\n",
+      "Coord: [-0.8  0.1]\tAcc: 19\tLoss: 2.308\r"
      ]
     }
    ],
