--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7650,7 +7650,9 @@
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 21.803977272727273\tLoss: 39.743\n",
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 12.571022727272727\tLoss: 55.31\n",
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 9.588068181818182\tLoss: 49.138\n",
-      "Coord: [-1.  -0.2]\tAcc: 17\tLoss: 2.2956\r"
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 11.363636363636363\tLoss: 2.302\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 15.198863636363637\tLoss: 2.283\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 24.005681818181817\tLoss: 2.132\n"
      ]
     }
    ],
