Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7598,7 +7598,11 @@
       "count: 220\tCoord: [0. 0.]\t\tAcc: 99.21875\tLoss: 0.027\n",
       "count: 222\tCoord: [0.2 0. ]\t\tAcc: 86.2215909090909\tLoss: 1.184\n",
       "count: 224\tCoord: [0.4 0. ]\t\tAcc: 40.83806818181818\tLoss: 19.911\n",
-      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 13.778409090909092\tLoss: 217.188\n"
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 13.778409090909092\tLoss: 217.188\n",
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 10.227272727272727\tLoss: 3073.793\n",
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 11.079545454545455\tLoss: 38614.598\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 10.795454545454545\tLoss: 3.581\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 11.008522727272727\tLoss: 3.275\n"
      ]
     }
    ],
