--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7652,7 +7652,9 @@
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 9.588068181818182\tLoss: 49.138\n",
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 11.363636363636363\tLoss: 2.302\n",
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 15.198863636363637\tLoss: 2.283\n",
-      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 24.005681818181817\tLoss: 2.132\n"
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 24.005681818181817\tLoss: 2.132\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 50.07102272727273\tLoss: 1.471\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 79.04829545454545\tLoss: 0.736\n"
      ]
     }
    ],
