Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7654,7 +7654,10 @@
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 15.198863636363637\tLoss: 2.283\n",
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 24.005681818181817\tLoss: 2.132\n",
       "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 50.07102272727273\tLoss: 1.471\n",
-      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 79.04829545454545\tLoss: 0.736\n"
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 79.04829545454545\tLoss: 0.736\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 94.67329545454545\tLoss: 0.243\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 83.59375\tLoss: 1.668\n",
+      "Coord: [ 0.3 -0.2]\tAcc: 86\tLoss: 5.843\r"
      ]
     }
    ],
