Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7602,7 +7602,12 @@
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 10.227272727272727\tLoss: 3073.793\n",
       "count: 230\tCoord: [1. 0.]\t\tAcc: 11.079545454545455\tLoss: 38614.598\n",
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 10.795454545454545\tLoss: 3.581\n",
-      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 11.008522727272727\tLoss: 3.275\n"
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 11.008522727272727\tLoss: 3.275\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 13.423295454545455\tLoss: 2.725\n",
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 66.97443181818181\tLoss: 0.927\n",
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 96.09375\tLoss: 0.103\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 96.09375\tLoss: 0.175\n",
+      "Coord: [0.2 0.1]\tAcc: 108\tLoss: 1.532\r"
      ]
     }
    ],
