Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7700,7 +7700,21 @@
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 11.860795454545455\tLoss: 7273.568\n",
       "count: 230\tCoord: [1. 0.]\t\tAcc: 10.227272727272727\tLoss: 133312.284\n",
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 10.582386363636363\tLoss: 2.33\n",
-      "Coord: [-0.8  0.1]\tAcc: 19\tLoss: 2.308\r"
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 15.696022727272727\tLoss: 2.294\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 33.80681818181818\tLoss: 2.033\n",
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 73.79261363636364\tLoss: 0.888\n",
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 97.44318181818181\tLoss: 0.082\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 96.51988636363636\tLoss: 0.129\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 74.28977272727273\tLoss: 2.787\n",
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 29.119318181818183\tLoss: 65.009\n",
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 12.215909090909092\tLoss: 1502.353\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coord: [0.8 0.1]\tAcc: 17\tLoss: 6696.0734\r"
      ]
     }
    ],
