--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7657,7 +7657,9 @@
       "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 79.04829545454545\tLoss: 0.736\n",
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 94.67329545454545\tLoss: 0.243\n",
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 83.59375\tLoss: 1.668\n",
-      "Coord: [ 0.3 -0.2]\tAcc: 86\tLoss: 5.843\r"
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 41.05113636363637\tLoss: 17.581\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 15.482954545454545\tLoss: 46.807\n",
+      "Coord: [ 0.7 -0.2]\tAcc: 11\tLoss: 59.638\r"
      ]
     }
    ],
