Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7607,7 +7607,17 @@
       "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 66.97443181818181\tLoss: 0.927\n",
       "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 96.09375\tLoss: 0.103\n",
       "count: 242\tCoord: [0.1 0.1]\t\tAcc: 96.09375\tLoss: 0.175\n",
-      "Coord: [0.2 0.1]\tAcc: 108\tLoss: 1.532\r"
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 65.19886363636364\tLoss: 6.115\n",
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 24.076704545454547\tLoss: 55.14\n",
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 10.511363636363637\tLoss: 834.502\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 11.789772727272727\tLoss: 10375.044\n",
+      "Coord: [1.  0.1]\tAcc: 13\tLoss: 45085.895\r"
      ]
     }
    ],
