--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7659,7 +7659,9 @@
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 83.59375\tLoss: 1.668\n",
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 41.05113636363637\tLoss: 17.581\n",
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 15.482954545454545\tLoss: 46.807\n",
-      "Coord: [ 0.7 -0.2]\tAcc: 11\tLoss: 59.638\r"
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 10.653409090909092\tLoss: 51.231\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 9.659090909090908\tLoss: 44.833\n",
+      "Coord: [-1.  -0.1]\tAcc: 10\tLoss: 2.302\r"
      ]
     }
    ],
