Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7661,7 +7661,9 @@
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 15.482954545454545\tLoss: 46.807\n",
       "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 10.653409090909092\tLoss: 51.231\n",
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 9.659090909090908\tLoss: 44.833\n",
-      "Coord: [-1.  -0.1]\tAcc: 10\tLoss: 2.302\r"
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 12.642045454545455\tLoss: 2.298\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 18.110795454545453\tLoss: 2.242\n",
+      "Coord: [-0.5 -0.1]\tAcc: 45\tLoss: 1.838\r"
      ]
     }
    ],
