Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7617,7 +7617,11 @@
      "output_type": "stream",
      "text": [
       "count: 250\tCoord: [0.9 0.1]\t\tAcc: 11.789772727272727\tLoss: 10375.044\n",
-      "Coord: [1.  0.1]\tAcc: 13\tLoss: 45085.895\r"
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 11.008522727272727\tLoss: 3.918\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 10.653409090909092\tLoss: 3.323\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 11.292613636363637\tLoss: 3.015\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 34.65909090909091\tLoss: 1.874\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 84.6590909090909\tLoss: 0.477\n"
      ]
     }
    ],
