Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7714,7 +7714,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coord: [0.8 0.1]\tAcc: 17\tLoss: 6696.0734\r"
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 10.653409090909092\tLoss: 35614.787\n",
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 10.9375\tLoss: 2.437\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 11.008522727272727\tLoss: 2.352\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 20.525568181818183\tLoss: 2.254\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 48.36647727272727\tLoss: 1.674\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 85.51136363636364\tLoss: 0.501\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 95.88068181818181\tLoss: 0.199\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 85.08522727272727\tLoss: 1.12\n",
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 50.85227272727273\tLoss: 13.514\n"
      ]
     }
    ],
