--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7663,7 +7663,9 @@
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 9.659090909090908\tLoss: 44.833\n",
       "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 12.642045454545455\tLoss: 2.298\n",
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 18.110795454545453\tLoss: 2.242\n",
-      "Coord: [-0.5 -0.1]\tAcc: 45\tLoss: 1.838\r"
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 41.54829545454545\tLoss: 1.825\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 71.16477272727273\tLoss: 0.86\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 95.95170454545455\tLoss: 0.151\n"
      ]
     }
    ],
