Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7621,7 +7621,11 @@
       "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 10.653409090909092\tLoss: 3.323\n",
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 11.292613636363637\tLoss: 3.015\n",
       "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 34.65909090909091\tLoss: 1.874\n",
-      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 84.6590909090909\tLoss: 0.477\n"
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 84.6590909090909\tLoss: 0.477\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 95.66761363636364\tLoss: 0.189\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 82.03125\tLoss: 1.77\n",
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 40.12784090909091\tLoss: 21.286\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 14.914772727272727\tLoss: 194.013\n"
      ]
     }
    ],
