--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7665,7 +7665,9 @@
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 18.110795454545453\tLoss: 2.242\n",
       "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 41.54829545454545\tLoss: 1.825\n",
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 71.16477272727273\tLoss: 0.86\n",
-      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 95.95170454545455\tLoss: 0.151\n"
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 95.95170454545455\tLoss: 0.151\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 96.51988636363636\tLoss: 0.192\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 69.60227272727273\tLoss: 4.721\n"
      ]
     }
    ],
