Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7667,7 +7667,10 @@
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 71.16477272727273\tLoss: 0.86\n",
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 95.95170454545455\tLoss: 0.151\n",
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 96.51988636363636\tLoss: 0.192\n",
-      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 69.60227272727273\tLoss: 4.721\n"
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 69.60227272727273\tLoss: 4.721\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 28.338068181818183\tLoss: 29.439\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 11.860795454545455\tLoss: 49.952\n",
+      "Coord: [ 0.8 -0.1]\tAcc: 10\tLoss: 51.386\r"
      ]
     }
    ],
