Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7625,7 +7625,11 @@
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 95.66761363636364\tLoss: 0.189\n",
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 82.03125\tLoss: 1.77\n",
       "count: 266\tCoord: [0.4 0.2]\t\tAcc: 40.12784090909091\tLoss: 21.286\n",
-      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 14.914772727272727\tLoss: 194.013\n"
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 14.914772727272727\tLoss: 194.013\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 10.582386363636363\tLoss: 2982.818\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 10.866477272727273\tLoss: 49661.952\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 11.079545454545455\tLoss: 3.492\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 11.008522727272727\tLoss: 3.119\n"
      ]
     }
    ],
