Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7722,7 +7722,16 @@
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 85.51136363636364\tLoss: 0.501\n",
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 95.88068181818181\tLoss: 0.199\n",
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 85.08522727272727\tLoss: 1.12\n",
-      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 50.85227272727273\tLoss: 13.514\n"
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 50.85227272727273\tLoss: 13.514\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 15.198863636363637\tLoss: 328.558\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 12.428977272727273\tLoss: 7829.07\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 10.085227272727273\tLoss: 139705.729\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 9.588068181818182\tLoss: 2.384\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 14.346590909090908\tLoss: 2.363\n",
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 28.480113636363637\tLoss: 2.168\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 63.63636363636363\tLoss: 1.323\n",
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 87.2159090909091\tLoss: 0.592\n",
+      "Coord: [0.  0.3]\tAcc: 113\tLoss: 0.773\r"
      ]
     }
    ],
