--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7670,7 +7670,9 @@
       "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 69.60227272727273\tLoss: 4.721\n",
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 28.338068181818183\tLoss: 29.439\n",
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 11.860795454545455\tLoss: 49.952\n",
-      "Coord: [ 0.8 -0.1]\tAcc: 10\tLoss: 51.386\r"
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 10.15625\tLoss: 47.926\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 10.9375\tLoss: 2.302\n",
+      "Coord: [-0.9  0. ]\tAcc: 21\tLoss: 2.287\r"
      ]
     }
    ],
