Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7629,7 +7629,11 @@
       "count: 270\tCoord: [0.8 0.2]\t\tAcc: 10.582386363636363\tLoss: 2982.818\n",
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 10.866477272727273\tLoss: 49661.952\n",
       "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 11.079545454545455\tLoss: 3.492\n",
-      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 11.008522727272727\tLoss: 3.119\n"
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 11.008522727272727\tLoss: 3.119\n",
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 17.1875\tLoss: 2.53\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 62.00284090909091\tLoss: 1.131\n",
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 87.2159090909091\tLoss: 0.501\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 86.29261363636364\tLoss: 1.02\n"
      ]
     }
    ],
