--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7672,7 +7672,9 @@
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 11.860795454545455\tLoss: 49.952\n",
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 10.15625\tLoss: 47.926\n",
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 10.9375\tLoss: 2.302\n",
-      "Coord: [-0.9  0. ]\tAcc: 21\tLoss: 2.287\r"
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 14.488636363636363\tLoss: 2.283\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 27.911931818181817\tLoss: 2.101\n",
+      "Coord: [-0.5  0. ]\tAcc: 59\tLoss: 1.791\r"
      ]
     }
    ],
