Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7674,7 +7674,9 @@
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 10.9375\tLoss: 2.302\n",
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 14.488636363636363\tLoss: 2.283\n",
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 27.911931818181817\tLoss: 2.101\n",
-      "Coord: [-0.5  0. ]\tAcc: 59\tLoss: 1.791\r"
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 60.65340909090909\tLoss: 1.259\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 88.42329545454545\tLoss: 0.361\n",
+      "Coord: [-0.1  0. ]\tAcc: 121\tLoss: 0.135\r"
      ]
     }
    ],
