Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7633,7 +7633,11 @@
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 17.1875\tLoss: 2.53\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 62.00284090909091\tLoss: 1.131\n",
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 87.2159090909091\tLoss: 0.501\n",
-      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 86.29261363636364\tLoss: 1.02\n"
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 86.29261363636364\tLoss: 1.02\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 56.53409090909091\tLoss: 8.901\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 22.94034090909091\tLoss: 57.258\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 11.008522727272727\tLoss: 753.792\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 11.221590909090908\tLoss: 12845.679\n"
      ]
     }
    ],
