Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7731,7 +7731,15 @@
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 28.480113636363637\tLoss: 2.168\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 63.63636363636363\tLoss: 1.323\n",
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 87.2159090909091\tLoss: 0.592\n",
-      "Coord: [0.  0.3]\tAcc: 113\tLoss: 0.773\r"
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 85.22727272727273\tLoss: 1.038\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 65.41193181818181\tLoss: 4.946\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 25.923295454545453\tLoss: 76.818\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 12.428977272727273\tLoss: 1650.783\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 10.653409090909092\tLoss: 37115.349\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 8.948863636363637\tLoss: 2.69\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 11.576704545454545\tLoss: 2.495\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 18.110795454545453\tLoss: 2.428\n",
+      "Coord: [-0.5  0.4]\tAcc: 39\tLoss: 2.195\r"
      ]
     }
    ],
