--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7676,7 +7676,9 @@
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 27.911931818181817\tLoss: 2.101\n",
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 60.65340909090909\tLoss: 1.259\n",
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 88.42329545454545\tLoss: 0.361\n",
-      "Coord: [-0.1  0. ]\tAcc: 121\tLoss: 0.135\r"
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 98.57954545454545\tLoss: 0.043\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 89.0625\tLoss: 0.809\n",
+      "Coord: [0.3 0. ]\tAcc: 88\tLoss: 5.232\r"
      ]
     }
    ],
