Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7637,7 +7637,12 @@
       "count: 286\tCoord: [0.3 0.3]\t\tAcc: 56.53409090909091\tLoss: 8.901\n",
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 22.94034090909091\tLoss: 57.258\n",
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 11.008522727272727\tLoss: 753.792\n",
-      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 11.221590909090908\tLoss: 12845.679\n"
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 11.221590909090908\tLoss: 12845.679\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 11.221590909090908\tLoss: 4.109\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 11.505681818181818\tLoss: 3.231\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 12.073863636363637\tLoss: 2.819\n",
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 37.85511363636363\tLoss: 1.856\n",
+      "Coord: [-0.3  0.4]\tAcc: 79\tLoss: 1.186\r"
      ]
     }
    ],
