--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7678,7 +7678,9 @@
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 88.42329545454545\tLoss: 0.361\n",
       "count: 220\tCoord: [0. 0.]\t\tAcc: 98.57954545454545\tLoss: 0.043\n",
       "count: 222\tCoord: [0.2 0. ]\t\tAcc: 89.0625\tLoss: 0.809\n",
-      "Coord: [0.3 0. ]\tAcc: 88\tLoss: 5.232\r"
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 49.28977272727273\tLoss: 12.631\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 17.897727272727273\tLoss: 41.599\n",
+      "Coord: [0.8 0. ]\tAcc: 14\tLoss: 44.564\r"
      ]
     }
    ],
