--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7680,7 +7680,9 @@
       "count: 222\tCoord: [0.2 0. ]\t\tAcc: 89.0625\tLoss: 0.809\n",
       "count: 224\tCoord: [0.4 0. ]\t\tAcc: 49.28977272727273\tLoss: 12.631\n",
       "count: 226\tCoord: [0.6 0. ]\t\tAcc: 17.897727272727273\tLoss: 41.599\n",
-      "Coord: [0.8 0. ]\tAcc: 14\tLoss: 44.564\r"
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 10.724431818181818\tLoss: 49.268\n",
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 9.019886363636363\tLoss: 48.374\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 13.423295454545455\tLoss: 2.293\n"
      ]
     }
    ],
