Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7642,7 +7642,11 @@
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 11.505681818181818\tLoss: 3.231\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 12.073863636363637\tLoss: 2.819\n",
       "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 37.85511363636363\tLoss: 1.856\n",
-      "Coord: [-0.3  0.4]\tAcc: 79\tLoss: 1.186\r"
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 70.09943181818181\tLoss: 1.046\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 81.10795454545455\tLoss: 1.081\n",
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 65.9090909090909\tLoss: 4.724\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 33.23863636363637\tLoss: 29.31\n",
+      "Coord: [0.5 0.4]\tAcc: 29\tLoss: 67.817\r"
      ]
     }
    ],
