Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7739,7 +7739,15 @@
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 8.948863636363637\tLoss: 2.69\n",
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 11.576704545454545\tLoss: 2.495\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 18.110795454545453\tLoss: 2.428\n",
-      "Coord: [-0.5  0.4]\tAcc: 39\tLoss: 2.195\r"
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 38.13920454545455\tLoss: 2.117\n",
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 69.0340909090909\tLoss: 1.488\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 78.26704545454545\tLoss: 1.608\n",
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 68.2528409090909\tLoss: 3.803\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 39.91477272727273\tLoss: 21.512\n",
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 12.642045454545455\tLoss: 407.454\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 10.511363636363637\tLoss: 8762.736\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 10.582386363636363\tLoss: 141790.794\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.795454545454545\tLoss: 2.788\n"
      ]
     }
    ],
