--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7682,7 +7682,9 @@
       "count: 226\tCoord: [0.6 0. ]\t\tAcc: 17.897727272727273\tLoss: 41.599\n",
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 10.724431818181818\tLoss: 49.268\n",
       "count: 230\tCoord: [1. 0.]\t\tAcc: 9.019886363636363\tLoss: 48.374\n",
-      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 13.423295454545455\tLoss: 2.293\n"
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 13.423295454545455\tLoss: 2.293\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 19.318181818181817\tLoss: 2.233\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 45.17045454545455\tLoss: 1.784\n"
      ]
     }
    ],
