--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7646,7 +7646,11 @@
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 81.10795454545455\tLoss: 1.081\n",
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 65.9090909090909\tLoss: 4.724\n",
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 33.23863636363637\tLoss: 29.31\n",
-      "Coord: [0.5 0.4]\tAcc: 29\tLoss: 67.817\r"
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 14.346590909090908\tLoss: 185.903\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 10.582386363636363\tLoss: 2830.39\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 10.9375\tLoss: 58333.321\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.369318181818182\tLoss: 4.208\n",
+      "Coord: [-0.8  0.5]\tAcc: 13\tLoss: 3.568\r"
      ]
     }
    ],
