--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7684,7 +7684,10 @@
       "count: 230\tCoord: [1. 0.]\t\tAcc: 9.019886363636363\tLoss: 48.374\n",
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 13.423295454545455\tLoss: 2.293\n",
       "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 19.318181818181817\tLoss: 2.233\n",
-      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 45.17045454545455\tLoss: 1.784\n"
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 45.17045454545455\tLoss: 1.784\n",
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 76.70454545454545\tLoss: 0.699\n",
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 96.44886363636364\tLoss: 0.102\n",
+      "Coord: [0.  0.1]\tAcc: 125\tLoss: 0.173\r"
      ]
     }
    ],
