Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7687,7 +7687,9 @@
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 45.17045454545455\tLoss: 1.784\n",
       "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 76.70454545454545\tLoss: 0.699\n",
       "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 96.44886363636364\tLoss: 0.102\n",
-      "Coord: [0.  0.1]\tAcc: 125\tLoss: 0.173\r"
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 95.66761363636364\tLoss: 0.224\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 70.45454545454545\tLoss: 4.395\n",
+      "Coord: [0.4 0.1]\tAcc: 54\tLoss: 15.534\r"
      ]
     }
    ],
