--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7650,7 +7650,11 @@
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 10.582386363636363\tLoss: 2830.39\n",
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 10.9375\tLoss: 58333.321\n",
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.369318181818182\tLoss: 4.208\n",
-      "Coord: [-0.8  0.5]\tAcc: 13\tLoss: 3.568\r"
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 11.71875\tLoss: 2.998\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 20.525568181818183\tLoss: 2.418\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 52.48579545454545\tLoss: 1.581\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 70.52556818181819\tLoss: 1.52\n",
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 66.61931818181819\tLoss: 3.433\n"
      ]
     }
    ],
