--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7747,7 +7747,16 @@
       "count: 310\tCoord: [0.6 0.4]\t\tAcc: 12.642045454545455\tLoss: 407.454\n",
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 10.511363636363637\tLoss: 8762.736\n",
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 10.582386363636363\tLoss: 141790.794\n",
-      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.795454545454545\tLoss: 2.788\n"
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.795454545454545\tLoss: 2.788\n",
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 13.068181818181818\tLoss: 2.664\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 22.585227272727273\tLoss: 2.65\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 47.30113636363637\tLoss: 2.416\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 65.625\tLoss: 2.681\n",
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 63.56534090909091\tLoss: 4.457\n",
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 44.81534090909091\tLoss: 12.381\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 19.105113636363637\tLoss: 114.961\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 11.079545454545455\tLoss: 2086.848\n",
+      "Coord: [0.8 0.5]\tAcc: 21\tLoss: 7086.2326\r"
      ]
     }
    ],
