--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7689,7 +7689,15 @@
       "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 96.44886363636364\tLoss: 0.102\n",
       "count: 242\tCoord: [0.1 0.1]\t\tAcc: 95.66761363636364\tLoss: 0.224\n",
       "count: 244\tCoord: [0.3 0.1]\t\tAcc: 70.45454545454545\tLoss: 4.395\n",
-      "Coord: [0.4 0.1]\tAcc: 54\tLoss: 15.534\r"
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 30.18465909090909\tLoss: 26.594\n",
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 13.849431818181818\tLoss: 47.7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coord: [0.8 0.1]\tAcc: 10\tLoss: 54.713\r"
      ]
     }
    ],
