Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7654,7 +7654,11 @@
       "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 20.525568181818183\tLoss: 2.418\n",
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 52.48579545454545\tLoss: 1.581\n",
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 70.52556818181819\tLoss: 1.52\n",
-      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 66.61931818181819\tLoss: 3.433\n"
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 66.61931818181819\tLoss: 3.433\n",
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 42.11647727272727\tLoss: 16.558\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 21.235795454545453\tLoss: 73.239\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 11.647727272727273\tLoss: 734.86\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 11.079545454545455\tLoss: 14820.83\n"
      ]
     }
    ],
