--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7697,7 +7697,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coord: [0.8 0.1]\tAcc: 10\tLoss: 54.713\r"
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 8.664772727272727\tLoss: 49.593\n",
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 11.505681818181818\tLoss: 2.301\n",
+      "Coord: [-0.8  0.2]\tAcc: 19\tLoss: 2.273\r"
      ]
     }
    ],
