Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7699,7 +7699,9 @@
      "text": [
       "count: 250\tCoord: [0.9 0.1]\t\tAcc: 8.664772727272727\tLoss: 49.593\n",
       "count: 252\tCoord: [-1.   0.2]\t\tAcc: 11.505681818181818\tLoss: 2.301\n",
-      "Coord: [-0.8  0.2]\tAcc: 19\tLoss: 2.273\r"
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 16.974431818181817\tLoss: 2.277\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 28.125\tLoss: 2.117\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 61.57670454545455\tLoss: 1.243\n"
      ]
     }
    ],
