--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7658,7 +7658,12 @@
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 42.11647727272727\tLoss: 16.558\n",
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 21.235795454545453\tLoss: 73.239\n",
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 11.647727272727273\tLoss: 734.86\n",
-      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 11.079545454545455\tLoss: 14820.83\n"
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 11.079545454545455\tLoss: 14820.83\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 11.150568181818182\tLoss: 7.745\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 11.505681818181818\tLoss: 4.172\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 15.269886363636363\tLoss: 2.741\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 33.59375\tLoss: 2.13\n",
+      "Coord: [-0.3  0.6]\tAcc: 63\tLoss: 1.994\r"
      ]
     }
    ],
